# `vix` is both the application package and the workspace root, so
# `cargo build`/`cargo test --workspace` cover the internal crates too, and the
# whole tree shares one lockfile and target directory.
[workspace]
members = ["crates/*"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Where to host releases
hosting = "github"
# Whether to install an updater program
install-updater = false
# Homebrew tap repo to publish the formula to.
tap = "vixide/homebrew-tap"
# Run the Homebrew publish job (pushes the formula to the tap above).
publish-jobs = ["homebrew"]
# npm scope for the published package (=> @vixide/vix).
npm-scope = "@vixide"

# Metadata shared by the root `vix` package and every `crates/vix-*` member, so
# version/edition/license/etc. are declared once and inherited with
# `field.workspace = true`.
[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/vixide/vix"
homepage = "https://github.com/vixide/vix"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]

# All external dependencies are declared here once; every member crate (and the
# root `vix` package) inherits them with `{ workspace = true }` so versions and
# feature sets stay in lock-step across the workspace.
[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
ignore = "0.4"
ureq = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui-image = { version = "11.0.4", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
confy = "2.0.0"
clap = { version = "4.6.1", features = ["derive"] }
rust-i18n = "4.1.0"
base64 = "0.22"
evalexpr = "13"
getrandom = "0.2"
htmd = "0.5"
jiff = "0.2"
percent-encoding = "2"
pulldown-cmark = "0.13"
sha2 = "0.10"
similar = { version = "2", features = ["inline"] }
spellbook = "0.4"
sysinfo = "0.33"
toml = "0.8"
md-5 = "0.10"
crc32fast = "1"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }
include_dir = "0.7.4"
serde_yaml = "0.9.34"
markdown = "1.0.0"
nix = { version = "0.29", features = ["signal"] }
qrcode = { version = "0.14", default-features = false }
portable-pty = "0.8"
vt100 = "0.15"
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
ratatui-core = "0.1"
ropey = "1.6"
rust-embed = { version = "8.11", features = ["include-exclude"] }
streaming-iterator = "0.1"
tree-sitter = "0.26"
unicode-segmentation = "1.13"
unicode-width = "0.2"
tree-sitter-bash = { version = "0.25.1" }
tree-sitter-c = { version = "0.24.2" }
tree-sitter-c-sharp = { version = "0.23.5" }
tree-sitter-cpp = { version = "0.23.4" }
tree-sitter-css = { version = "0.25" }
tree-sitter-go = { version = "0.25" }
tree-sitter-html = { version = "0.23.2" }
tree-sitter-java = { version = "0.23.5" }
tree-sitter-javascript = { version = "0.25" }
tree-sitter-json = { version = "0.24.8" }
tree-sitter-md = { version = "0.5.3" }
tree-sitter-python = { version = "0.25" }
tree-sitter-rust = { version = "0.24" }
tree-sitter-toml-ng = { version = "0.7.0" }
tree-sitter-typescript = { version = "0.23" }
tree-sitter-yaml = { version = "0.7" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "any", "sqlite", "postgres", "mysql"] }
tokio = { version = "1.52.3", features = ["rt", "net", "time"] }
futures-util = { version = "0.3", default-features = false }
mimalloc = "0.1"
# Property-based ("fuzz") testing of parsers and converters (dev-only).
proptest = "1"

[package]
name = "vix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Vix IDE: a visual integrated development environment that is TUI, friendly, featureful, high-speed, and high-security."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["tui", "editor", "ide", "terminal", "developer"]
categories = ["text-editors", "command-line-utilities"]

[features]
# Which Tree-sitter grammars to compile in. Each grammar is a sizeable C parser,
# so the default is a lean set; opt into more (or all) at build time:
#   cargo build --release                                  # common grammars
#   cargo build --release --no-default-features            # no highlighting (smallest)
#   cargo build --release --no-default-features --features syntax-all
#
# The grammars actually live in the vix_editor_core crate; these features simply
# forward to that crate's identically-named features.
default = ["syntax-common"]
syntax-common = ["vix-editor-core/syntax-common"]
syntax-all = ["vix-editor-core/syntax-all"]

lang-bash = ["vix-editor-core/lang-bash"]
lang-c = ["vix-editor-core/lang-c"]
lang-c-sharp = ["vix-editor-core/lang-c-sharp"]
lang-cpp = ["vix-editor-core/lang-cpp"]
lang-css = ["vix-editor-core/lang-css"]
lang-go = ["vix-editor-core/lang-go"]
lang-html = ["vix-editor-core/lang-html"]
lang-java = ["vix-editor-core/lang-java"]
lang-javascript = ["vix-editor-core/lang-javascript"]
lang-json = ["vix-editor-core/lang-json"]
lang-markdown = ["vix-editor-core/lang-markdown"]
lang-python = ["vix-editor-core/lang-python"]
lang-rust = ["vix-editor-core/lang-rust"]
lang-toml = ["vix-editor-core/lang-toml"]
lang-typescript = ["vix-editor-core/lang-typescript"]
lang-yaml = ["vix-editor-core/lang-yaml"]

# Every internal `crates/vix-*` member is declared with BOTH a `path` (used for
# all in-workspace builds) and an explicit `version` (used when publishing to
# crates.io). The version is the shared `workspace.package.version` above; keep
# the two in step when bumping — a mismatched `version` here would publish
# against the wrong dependency range even though local builds resolve by path.
[dependencies]
# Shared single-embed i18n backend for the whole workspace (see crates/vix-i18n).
vix-i18n = { path = "crates/vix-i18n", version = "1.2.0" }

# Extracted concept crates (one per major concept).
# base16-generated themes for the theme system.
vix-base16 = { path = "crates/vix-base16", version = "1.2.0" }
# Clock box: live date/time strings (local, UTC, ISO week, active zone) + rows.
vix-clock-panel = { path = "crates/vix-clock-panel", version = "1.2.0" }
# Convert: CSV text into a JSON array of objects.
vix-convert-from-csv-into-json-tool = { path = "crates/vix-convert-from-csv-into-json-tool", version = "1.2.0" }
# Convert: CSV text into TSV.
vix-convert-from-csv-into-tsv-tool = { path = "crates/vix-convert-from-csv-into-tsv-tool", version = "1.2.0" }
# Convert: a JSON array of objects into CSV.
vix-convert-from-json-into-csv-tool = { path = "crates/vix-convert-from-json-into-csv-tool", version = "1.2.0" }
# Convert: a JSON array of objects into TSV.
vix-convert-from-json-into-tsv-tool = { path = "crates/vix-convert-from-json-into-tsv-tool", version = "1.2.0" }
# Convert: TSV text into CSV.
vix-convert-from-tsv-into-csv-tool = { path = "crates/vix-convert-from-tsv-into-csv-tool", version = "1.2.0" }
# Convert: TSV text into a JSON array of objects.
vix-convert-from-tsv-into-json-tool = { path = "crates/vix-convert-from-tsv-into-json-tool", version = "1.2.0" }
# Debug Adapter Protocol (DAP) client: drive a debug adapter over stdio.
vix-dap = { path = "crates/vix-dap", version = "1.2.0" }
# DB workbench: connection management, schema browsing, and SQL queries.
vix-db = { path = "crates/vix-db", version = "1.2.0" }
# Editor host: the `CodeEditor` widget wrapper and the pane tree.
vix-editor = { path = "crates/vix-editor", version = "1.2.0" }
# The fully-custom terminal code-editor widget (owns the Tree-sitter grammars);
# default-features = false leaves grammar selection to the root `lang-*` features.
vix-editor-core = { path = "crates/vix-editor-core", version = "1.2.0", default-features = false }
# LSP client: process management and document sync over `vix_lsp_core`.
vix-lsp = { path = "crates/vix-lsp", version = "1.2.0" }
# Top menu bar with keyboard-navigable dropdowns (one level of submenus).
vix-menu = { path = "crates/vix-menu", version = "1.2.0" }
# Per-workspace editor session, persisted with `confy`.
vix-session = { path = "crates/vix-session", version = "1.2.0" }
# User settings, persisted with `confy`.
vix-settings = { path = "crates/vix-settings", version = "1.2.0" }
# JSON snippet files: loading, scope resolution, merging, and the picker.
vix-snippets = { path = "crates/vix-snippets", version = "1.2.0" }
# Nerd Font icons, plus a re-export of the `vix_theme_model` theme model.
vix-theme = { path = "crates/vix-theme", version = "1.2.0" }
# Persistent undo: save a buffer's undo tree to disk and restore it on reopen.
vix-undo-store = { path = "crates/vix-undo-store", version = "1.2.0" }
# Display one parsed vCard as a table of labelled fields, plus panel state.
vix-vcard-panel = { path = "crates/vix-vcard-panel", version = "1.2.0" }
# A workspace: a named set of project folders plus the files to reopen.
vix-workspace = { path = "crates/vix-workspace", version = "1.2.0" }
# Add, drop, and toggle a prefix/suffix pair around text.
vix-affix = { path = "crates/vix-affix", version = "1.2.0" }
# Reviewable diff for AI text transforms (Annotate / Improve).
vix-ai-diff = { path = "crates/vix-ai-diff", version = "1.2.0" }
# AI chat panel: a persistent conversation surface for the configured assistant.
vix-ai-panel = { path = "crates/vix-ai-panel", version = "1.2.0" }
# Align lines on a delimiter (`=`, `:`, `,`, `|`, …).
vix-align = { path = "crates/vix-align", version = "1.2.0" }
# ASCII panel (Tools menu): the ASCII reference table + row-selection state.
vix-ascii-character-picker = { path = "crates/vix-ascii-character-picker", version = "1.2.0" }
# Base64 encode and decode (Tools → Convert → Base64).
vix-base64-tool = { path = "crates/vix-base64-tool", version = "1.2.0" }
# Convert an integer between decimal, hexadecimal, binary, and octal.
vix-base-tool = { path = "crates/vix-base-tool", version = "1.2.0" }
# Bottom dock: a scrollable line buffer for logs, output, and data views.
vix-bottom-dock = { path = "crates/vix-bottom-dock", version = "1.2.0" }
# Evaluate a typed formula, plus the Calculator dialog's editing state.
vix-calculator-tool = { path = "crates/vix-calculator-tool", version = "1.2.0" }
# Calendar box: the navigable month grid.
vix-calendar-panel = { path = "crates/vix-calendar-panel", version = "1.2.0" }
# Text case transforms applied to the editor selection (Edit → Case).
vix-case = { path = "crates/vix-case", version = "1.2.0" }
# Compute SHA-256 and SHA-512 checksums of text, returned as lowercase hex.
vix-checksum-tool = { path = "crates/vix-checksum-tool", version = "1.2.0" }
# Parse and convert colors between HEX, RGB, and HSL.
vix-color-converter-tool = { path = "crates/vix-color-converter-tool", version = "1.2.0" }
# Parse Git merge-conflict markers and resolve the conflict under the cursor.
vix-conflict-tool = { path = "crates/vix-conflict-tool", version = "1.2.0" }
# Browse a directory of vCard files as a table of contacts.
vix-contact-panel = { path = "crates/vix-contact-panel", version = "1.2.0" }
# Convert: HTML into Markdown.
vix-convert-from-html-into-markdown-tool = { path = "crates/vix-convert-from-html-into-markdown-tool", version = "1.2.0" }
# Convert: JSON into TOML.
vix-convert-from-json-into-toml-tool = { path = "crates/vix-convert-from-json-into-toml-tool", version = "1.2.0" }
# Convert: JSON into YAML.
vix-convert-from-json-into-yaml-tool = { path = "crates/vix-convert-from-json-into-yaml-tool", version = "1.2.0" }
# Convert: Markdown into HTML.
vix-convert-from-markdown-into-html-tool = { path = "crates/vix-convert-from-markdown-into-html-tool", version = "1.2.0" }
# Convert: TOML into JSON.
vix-convert-from-toml-into-json-tool = { path = "crates/vix-convert-from-toml-into-json-tool", version = "1.2.0" }
# Convert: YAML into JSON.
vix-convert-from-yaml-into-json-tool = { path = "crates/vix-convert-from-yaml-into-json-tool", version = "1.2.0" }
# Shared CSV/TSV/JSON conversion helpers for the Tools → Convert tools.
vix-convert-tabular = { path = "crates/vix-convert-tabular", version = "1.2.0" }
# Read-only side-by-side comparison: a unified diff between two texts.
vix-diff-view = { path = "crates/vix-diff-view", version = "1.2.0" }
# The byte editor: a hex/ASCII view for editing raw file bytes.
vix-edit-bytes = { path = "crates/vix-edit-bytes", version = "1.2.0" }
# The SQL edit surface: a statement-oriented view of a `.sql` buffer.
vix-edit-sql = { path = "crates/vix-edit-sql", version = "1.2.0" }
# The structured-value editor: a foldable tree for JSON and YAML.
vix-edit-value = { path = "crates/vix-edit-value", version = "1.2.0" }
# Minimal EditorConfig support: resolve the indent settings for a file.
vix-editorconfig = { path = "crates/vix-editorconfig", version = "1.2.0" }
# A pragmatic subset of Emmet abbreviation expansion.
vix-emmet = { path = "crates/vix-emmet", version = "1.2.0" }
# Information about the active editor file, plus the panel's row-selection state.
vix-file-information-panel = { path = "crates/vix-file-information-panel", version = "1.2.0" }
# Filesystem helpers for the explorer's copy / cut / paste / delete.
vix-fileops = { path = "crates/vix-fileops", version = "1.2.0" }
# Find / find-and-replace for the editor.
vix-find-panel = { path = "crates/vix-find-panel", version = "1.2.0" }
# Reformat the selection (or buffer) within one data format: pretty-print or minify.
vix-format-tool = { path = "crates/vix-format-tool", version = "1.2.0" }
# Git integration: status/diff/staging via the git CLI.
vix-git = { path = "crates/vix-git", version = "1.2.0" }
# HTML Characters panel (Tools menu): named-character table + picker state.
vix-html-character-picker = { path = "crates/vix-html-character-picker", version = "1.2.0" }
# A minimal HTTP client driven by a `.http`-style buffer.
vix-http-client = { path = "crates/vix-http-client", version = "1.2.0" }
# Decode a JSON Web Token's header and payload into readable JSON.
vix-jwt-tool = { path = "crates/vix-jwt-tool", version = "1.2.0" }
# Data for the keyboard-shortcut help overlay.
vix-keyboard-shortcut-panel = { path = "crates/vix-keyboard-shortcut-panel", version = "1.2.0" }
# The available keyboard navigation styles ("keymaps"); the View → Keymap submenu.
vix-keymap-model = { path = "crates/vix-keymap-model", version = "1.2.0" }
# Left dock: the file explorer's lazily-expanded directory tree + selection.
vix-left-dock = { path = "crates/vix-left-dock", version = "1.2.0" }
# Available UI languages for Vix; the View → Locale submenu.
vix-locale-model = { path = "crates/vix-locale-model", version = "1.2.0" }
# Lorem ipsum placeholder text (Tools → Insert → Lorem ipsum).
vix-lorem = { path = "crates/vix-lorem", version = "1.2.0" }
# A pure LSP client core: JSON-RPC framing, message builders, parsers, positions.
vix-lsp-core = { path = "crates/vix-lsp-core", version = "1.2.0" }
# Persisted keyboard macros: named recordings of editor key events.
vix-macros = { path = "crates/vix-macros", version = "1.2.0" }
# Render Markdown to formatted plain-text lines for a read-only preview pane.
vix-markdown-preview = { path = "crates/vix-markdown-preview", version = "1.2.0" }
# The IANA-style media-type (MIME) table and the picker's filter + selection.
vix-media-type = { path = "crates/vix-media-type", version = "1.2.0" }
# A curated set of Nerd Font glyphs and the character-picker grid state.
vix-nerd-font-picker = { path = "crates/vix-nerd-font-picker", version = "1.2.0" }
# Basic Org-mode operations: headline structure editing and lightweight export.
vix-org = { path = "crates/vix-org", version = "1.2.0" }
# Org-contacts: contact management over Org files.
vix-org-contacts = { path = "crates/vix-org-contacts", version = "1.2.0" }
# The code-outline list (symbol kind + name + line) and the panel's selection.
vix-outline-panel = { path = "crates/vix-outline-panel", version = "1.2.0" }
# Command palette (Ctrl+P) with prefix-driven modes.
vix-palette = { path = "crates/vix-palette", version = "1.2.0" }
# A Pomodoro work/break countdown as a small state machine.
vix-pomodoro-tool = { path = "crates/vix-pomodoro-tool", version = "1.2.0" }
# QR code generation (Tools → QR Code).
vix-qr-tool = { path = "crates/vix-qr-tool", version = "1.2.0" }
# Interactive query-replace: step through matches one at a time.
vix-query = { path = "crates/vix-query", version = "1.2.0" }
# A live regular-expression tester, plus the dialog's editing state.
vix-regex-tool = { path = "crates/vix-regex-tool", version = "1.2.0" }
# Right dock: a message drawer of advice and notifications + selection.
vix-right-dock = { path = "crates/vix-right-dock", version = "1.2.0" }
# Org-roam: networked, Zettelkasten-style note-taking over a directory of Org files.
vix-roam = { path = "crates/vix-roam", version = "1.2.0" }
# A small library of reusable text snippets, plus the picker's selection state.
vix-snippet-tool = { path = "crates/vix-snippet-tool", version = "1.2.0" }
# Spell-checking for the Vix editor (Hunspell-backed, over comment/string ranges).
vix-spellcheck = { path = "crates/vix-spellcheck", version = "1.2.0" }
# Formatting for the bottom status bar's two segments.
vix-status-bar-panel = { path = "crates/vix-status-bar-panel", version = "1.2.0" }
# A read-only snapshot of host system information, plus the panel's selection.
vix-system-information-panel = { path = "crates/vix-system-information-panel", version = "1.2.0" }
# Matching HTML/XML tag navigation.
vix-tags = { path = "crates/vix-tags", version = "1.2.0" }
# Project task runner: named shell commands loaded from `tasks.toml`.
vix-tasks = { path = "crates/vix-tasks", version = "1.2.0" }
# Integrated terminal: a real PTY hosting a shell, parsed by `vt100`.
vix-terminal = { path = "crates/vix-terminal", version = "1.2.0" }
# Parse test-runner output into a pass/fail list with jump-to-failure.
vix-test-runner = { path = "crates/vix-test-runner", version = "1.2.0" }
# Statistics about a span of text, plus the panel's row-selection state.
vix-text-information-panel = { path = "crates/vix-text-information-panel", version = "1.2.0" }
# Small pure text transforms used by Edit/Tools actions.
vix-textops = { path = "crates/vix-textops", version = "1.2.0" }
# The Vix theme model: the JSON theme model, ratatui styles, and theme loading.
vix-theme-model = { path = "crates/vix-theme-model", version = "1.2.0" }
# Time-zone modeling: the IANA canonical zone table + the app-wide active zone.
vix-time-zone-model = { path = "crates/vix-time-zone-model", version = "1.2.0" }
# Convert a number between physical units, plus the Unit Converter dialog's state.
vix-unit-converter-tool = { path = "crates/vix-unit-converter-tool", version = "1.2.0" }
# URL percent-encode and decode (Tools → Convert → URL).
vix-url-tool = { path = "crates/vix-url-tool", version = "1.2.0" }
# Generate UUIDs of every version, v1 through v8.
vix-uuid-tool = { path = "crates/vix-uuid-tool", version = "1.2.0" }
# A small, dependency-free vCard 4.0 (RFC 6350) parser.
vix-vcard-parser = { path = "crates/vix-vcard-parser", version = "1.2.0" }
# The first-run welcome screen's scroll state.
vix-welcome-panel = { path = "crates/vix-welcome-panel", version = "1.2.0" }
# Live workspace metrics for the dashboard overlay (Tools → Workspace Dashboard).
vix-workspace-dashboard-panel = { path = "crates/vix-workspace-dashboard-panel", version = "1.2.0" }
# The X11 color table and the picker's row-selection + scroll state.
vix-x11-color-picker = { path = "crates/vix-x11-color-picker", version = "1.2.0" }
# Generate a secure random ZID: a lowercase hexadecimal identifier.
vix-zid-tool = { path = "crates/vix-zid-tool", version = "1.2.0" }

# Terminal UI core. The whole widget ecosystem must agree on this version.
ratatui = { workspace = true }
# Cross-platform terminal backend. Must match the crossterm that ratatui 0.30 re-exports.
crossterm = { workspace = true }
# Recursive, .gitignore-aware directory walking for the file index / fuzzy finder.
ignore = { workspace = true }
# HTTP client for the REST tool. Pure-Rust TLS (rustls) so it cross-compiles to
# musl/windows-gnu without a system OpenSSL.
ureq = { workspace = true }
# Regular expressions for find/replace.
regex = { workspace = true }
# Settings serialization (confy handles the TOML; serde derives the schema).
serde = { workspace = true }
# JSON for the LSP client's JSON-RPC traffic.
serde_json = { workspace = true }
# Image preview. Default features pull `chafa-dyn`, which dynamically links the
# native libchafa via pkg-config and so blocks portable cross-compilation; drop
# it and keep the built-in protocols (Sixel/Kitty/iTerm2/Halfblocks).
ratatui-image = { workspace = true }
image = { workspace = true }
confy = { workspace = true }
clap = { workspace = true }
rust-i18n = { workspace = true }

# Dependencies absorbed from the former subcrates (now modules under src/).
base64 = { workspace = true }
evalexpr = { workspace = true }
getrandom = { workspace = true }
htmd = { workspace = true }
jiff = { workspace = true }
percent-encoding = { workspace = true }
pulldown-cmark = { workspace = true }
sha2 = { workspace = true }
# `inline` enables word-level (intra-line) diffs in the Compare overlay.
similar = { workspace = true }
spellbook = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
md-5 = { workspace = true }
crc32fast = { workspace = true }
uuid = { workspace = true }
include_dir = { workspace = true }
serde_yaml = { workspace = true }
markdown = { workspace = true }
nix = { workspace = true }
# QR code generation (Tools → QR Code). default-features = false drops the
# optional image/svg renderers; we only use the built-in Unicode renderer.
qrcode = { workspace = true }
# Integrated terminal (Tools → Terminal): a real PTY (ConPTY/openpty) hosting a
# shell, with `vt100` parsing the escape sequences into a renderable screen grid.
portable-pty = { workspace = true }
vt100 = { workspace = true }

# Dependencies for the in-tree code-editor widget (src/editor_core/).
anyhow = { workspace = true }
arboard = { workspace = true }
ratatui-core = { workspace = true }
ropey = { workspace = true }
rust-embed = { workspace = true }
streaming-iterator = { workspace = true }
tree-sitter = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

# Optional Tree-sitter grammars, selected by the lang-* features above.
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-css = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-md = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-toml-ng = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }

# DB workbench (crates/vix-db/spec): embedded database drivers via the `Any` runtime
# driver — SQLite (bundled C), and pure-Rust PostgreSQL/MySQL over rustls (no
# system OpenSSL, same rationale as ureq). Replaces shelling out to the
# sqlite3/psql/mysql CLIs and holds one persistent connection per session.
sqlx = { workspace = true }
# Minimal runtime for sqlx's async drivers; each DB session owns a
# current-thread runtime on its own worker thread (src/db/session.rs).
tokio = { workspace = true }
futures-util = { workspace = true }

# Faster allocator for the MUSL static target (glibc's allocator is fine, but
# musl's is slow). Used as the global allocator in lib.rs/main.rs under the same
# cfg, so it is only pulled in — and its C code only compiled — for musl builds.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { workspace = true }

[profile.release]
lto = true
strip = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
