# vix-base64-tool: encode text to standard Base64, or decode Base64 back to
# text (Tools → Convert → Base64 → Encode / Decode). Pure logic.

[package]
name = "vix-base64-tool"
version = "0.1.0"
edition = "2021"
description = "Base64 encode/decode for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_base64_tool"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
