# vix-bottom-dock: state for the bottom dock — a scrollable line buffer for log
# messages, terminal/command output, data views, etc. Pure data (no
# dependencies); the host renders it.

[package]
name = "vix-bottom-dock"
version = "0.1.0"
edition = "2021"
description = "Bottom-dock line-buffer state for Vix."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_bottom_dock"
path = "src/lib.rs"
