# vix-checksum-tool: hash text with SHA-256 or SHA-512, returning the digest as
# lowercase hex. Pure logic; the host replaces the selection (or whole buffer)
# with the checksum (Tools → Checksum → SHA-256 / SHA-512).

[package]
name = "vix-checksum-tool"
version = "0.1.0"
edition = "2021"
description = "SHA-256 / SHA-512 checksum (hex) helpers for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_checksum_tool"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
