# vix-contact-panel: browse a directory of vCard files as a table of contacts
# (display name + file), plus the table's row-selection + scroll state. Pure data:
# the host scans the directory and parses each file's name (via vix-vcard-parser);
# this crate holds the list and tracks the selection. Choosing a row opens that
# vCard (the host then uses vix-vcard-panel to display it).

[package]
name = "vix-contact-panel"
version = "0.1.0"
edition = "2021"
description = "vCard directory browser (contact list) and selection state for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_contact_panel"
path = "src/lib.rs"
