# vix-convert-csv-to-tsv-tool: convert CSV text into TSV (Tools → Convert →
# CSV → TSV). A thin wrapper over vix-convert-tabular.

[package]
name = "vix-convert-csv-to-tsv-tool"
version = "0.1.0"
edition = "2021"
description = "Convert CSV to TSV for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_csv_to_tsv_tool"
path = "src/lib.rs"

[dependencies]
vix-convert-tabular = { path = "../vix-convert-tabular" }
