# vix-convert-from-json-into-tsv-tool: convert a JSON array of objects into TSV
# (Tools → Convert → JSON → TSV). A thin wrapper over vix-convert-tabular.

[package]
name = "vix-convert-from-json-into-tsv-tool"
version = "0.1.0"
edition = "2021"
description = "Convert from JSON into TSV for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_from_json_into_tsv_tool"
path = "src/lib.rs"

[dependencies]
vix-convert-tabular = { path = "../vix-convert-tabular" }
