# vix-convert-from-markdown-into-html-tool: render CommonMark Markdown to HTML
# (Tools → Convert → Markdown → HTML).

[package]
name = "vix-convert-from-markdown-into-html-tool"
version = "0.1.0"
edition = "2021"
description = "Convert from Markdown into HTML for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_from_markdown_into_html_tool"
path = "src/lib.rs"

[dependencies]
pulldown-cmark = "0.13"
