# vix-convert-from-toml-into-json-tool: convert TOML into JSON
# (Tools → Convert → TOML → JSON). Pure logic over serde.

[package]
name = "vix-convert-from-toml-into-json-tool"
version = "0.1.0"
edition = "2021"
description = "Convert from TOML into JSON for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_from_toml_into_json_tool"
path = "src/lib.rs"

[dependencies]
serde_json = "1"
toml = "0.8"
