# vix-convert-from-tsv-into-json-tool: convert TSV text into a JSON array of objects
# (Tools → Convert → TSV → JSON). A thin wrapper over vix-convert-tabular.

[package]
name = "vix-convert-from-tsv-into-json-tool"
version = "0.1.0"
edition = "2021"
description = "Convert from TSV into JSON for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_from_tsv_into_json_tool"
path = "src/lib.rs"

[dependencies]
vix-convert-tabular = { path = "../vix-convert-tabular" }
