# vix-convert-html-to-markdown-tool: convert HTML into Markdown
# (Tools → Convert → HTML → Markdown).

[package]
name = "vix-convert-html-to-markdown-tool"
version = "0.1.0"
edition = "2021"
description = "Convert HTML to Markdown for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_html_to_markdown_tool"
path = "src/lib.rs"

[dependencies]
htmd = "0.5"
