# vix-convert-tabular: shared CSV/TSV/JSON conversion helpers for Vix's
# Tools → Convert tabular tools. The per-direction tool crates
# (vix-convert-csv-to-json-tool, …) are thin wrappers over these functions, so
# the tricky delimited-text parsing and the JSON row/object mapping live in one
# place and can never drift between directions.

[package]
name = "vix-convert-tabular"
version = "0.1.0"
edition = "2021"
description = "Shared CSV/TSV/JSON conversion helpers for Vix's Convert tools."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_tabular"
path = "src/lib.rs"

[dependencies]
serde_json = "1"
