# vix-convert-tsv-to-csv-tool: convert TSV text into CSV (Tools → Convert →
# TSV → CSV). A thin wrapper over vix-convert-tabular.

[package]
name = "vix-convert-tsv-to-csv-tool"
version = "0.1.0"
edition = "2021"
description = "Convert TSV to CSV for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_convert_tsv_to_csv_tool"
path = "src/lib.rs"

[dependencies]
vix-convert-tabular = { path = "../vix-convert-tabular" }
