# vix-file-information-panel: facts about the active editor file — name, path,
# language, character/word/line counts, size, Unix permissions, and modified
# time — laid out as rows, plus the panel's row-selection + scroll state. Pure
# data (no dependencies): the host gathers the raw values (it owns the buffer and
# does the filesystem stat); this crate formats them and tracks the selection.

[package]
name = "vix-file-information-panel"
version = "0.1.0"
edition = "2021"
description = "Active-file information rows and row-selection state for Vix."
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/sixarm/vix"

[lib]
name = "vix_file_information_panel"
path = "src/lib.rs"
